; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/mp4/extr_mp4_reader.c_mp4_reader_seek.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/mp4/extr_mp4_reader.c_mp4_reader_seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_26__ = type { i64, %struct.TYPE_24__**, %struct.TYPE_20__* }
%struct.TYPE_24__ = type { %struct.TYPE_23__*, %struct.TYPE_21__*, i64 }
%struct.TYPE_23__ = type { %struct.TYPE_25__* }
%struct.TYPE_25__ = type { %struct.TYPE_27__, %struct.TYPE_22__* }
%struct.TYPE_27__ = type { i64, i32 }
%struct.TYPE_22__ = type { i64 }
%struct.TYPE_21__ = type { i64 }
%struct.TYPE_20__ = type { i32* }

@VC_CONTAINER_SUCCESS = common dso_local global i64 0, align 8
@VC_CONTAINER_ES_TYPE_VIDEO = common dso_local global i64 0, align 8
@MP4_SAMPLE_TABLE_STSS = common dso_local global i64 0, align 8
@VC_CONTAINER_SEEK_FLAG_FORWARD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_26__*, i32*, i32*, i32)* @mp4_reader_seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mp4_reader_seek(%struct.TYPE_26__* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_26__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_25__*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  %19 = alloca i64, align 8
  store %struct.TYPE_26__* %0, %struct.TYPE_26__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %20 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %20, i32 0, i32 2
  %22 = load %struct.TYPE_20__*, %struct.TYPE_20__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %10, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %18, align 4
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %27)
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %29)
  store i64 0, i64* %13, align 8
  br label %31

31:                                               ; preds = %50, %4
  %32 = load i64, i64* %13, align 8
  %33 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ult i64 %32, %35
  br i1 %36, label %37, label %53

37:                                               ; preds = %31
  %38 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %39, align 8
  %41 = load i64, i64* %13, align 8
  %42 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %40, i64 %41
  %43 = load %struct.TYPE_24__*, %struct.TYPE_24__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %43, i32 0, i32 0
  %45 = load %struct.TYPE_23__*, %struct.TYPE_23__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %45, i32 0, i32 0
  %47 = load %struct.TYPE_25__*, %struct.TYPE_25__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %47, i32 0, i32 0
  %49 = call i32 @memset(%struct.TYPE_27__* %48, i32 0, i32 16)
  br label %50

50:                                               ; preds = %37
  %51 = load i64, i64* %13, align 8
  %52 = add i64 %51, 1
  store i64 %52, i64* %13, align 8
  br label %31

53:                                               ; preds = %31
  %54 = load i32*, i32** %7, align 8
  %55 = load i32, i32* %54, align 4
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %84, label %57

57:                                               ; preds = %53
  store i64 0, i64* %13, align 8
  br label %58

58:                                               ; preds = %79, %57
  %59 = load i64, i64* %13, align 8
  %60 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %60, i32 0, i32 0
  %62 = load i64, i64* %61, align 8
  %63 = icmp ult i64 %59, %62
  br i1 %63, label %64, label %82

64:                                               ; preds = %58
  %65 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %66 = load i64, i64* %13, align 8
  %67 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %68 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %67, i32 0, i32 1
  %69 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %68, align 8
  %70 = load i64, i64* %13, align 8
  %71 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %69, i64 %70
  %72 = load %struct.TYPE_24__*, %struct.TYPE_24__** %71, align 8
  %73 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %72, i32 0, i32 0
  %74 = load %struct.TYPE_23__*, %struct.TYPE_23__** %73, align 8
  %75 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %74, i32 0, i32 0
  %76 = load %struct.TYPE_25__*, %struct.TYPE_25__** %75, align 8
  %77 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %76, i32 0, i32 0
  %78 = call i32 @mp4_read_sample_header(%struct.TYPE_26__* %65, i64 %66, %struct.TYPE_27__* %77)
  br label %79

79:                                               ; preds = %64
  %80 = load i64, i64* %13, align 8
  %81 = add i64 %80, 1
  store i64 %81, i64* %13, align 8
  br label %58

82:                                               ; preds = %58
  %83 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  store i64 %83, i64* %5, align 8
  br label %258

84:                                               ; preds = %53
  store i64 0, i64* %14, align 8
  br label %85

85:                                               ; preds = %116, %84
  %86 = load i64, i64* %14, align 8
  %87 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %88 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %87, i32 0, i32 0
  %89 = load i64, i64* %88, align 8
  %90 = icmp ult i64 %86, %89
  br i1 %90, label %91, label %119

91:                                               ; preds = %85
  %92 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %93 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %92, i32 0, i32 1
  %94 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %93, align 8
  %95 = load i64, i64* %14, align 8
  %96 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %94, i64 %95
  %97 = load %struct.TYPE_24__*, %struct.TYPE_24__** %96, align 8
  %98 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %97, i32 0, i32 2
  %99 = load i64, i64* %98, align 8
  %100 = icmp ne i64 %99, 0
  br i1 %100, label %101, label %115

101:                                              ; preds = %91
  %102 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %103 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %102, i32 0, i32 1
  %104 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %103, align 8
  %105 = load i64, i64* %14, align 8
  %106 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %104, i64 %105
  %107 = load %struct.TYPE_24__*, %struct.TYPE_24__** %106, align 8
  %108 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %107, i32 0, i32 1
  %109 = load %struct.TYPE_21__*, %struct.TYPE_21__** %108, align 8
  %110 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %109, i32 0, i32 0
  %111 = load i64, i64* %110, align 8
  %112 = load i64, i64* @VC_CONTAINER_ES_TYPE_VIDEO, align 8
  %113 = icmp eq i64 %111, %112
  br i1 %113, label %114, label %115

114:                                              ; preds = %101
  br label %119

115:                                              ; preds = %101, %91
  br label %116

116:                                              ; preds = %115
  %117 = load i64, i64* %14, align 8
  %118 = add i64 %117, 1
  store i64 %118, i64* %14, align 8
  br label %85

119:                                              ; preds = %114, %85
  %120 = load i64, i64* %14, align 8
  %121 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %122 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %121, i32 0, i32 0
  %123 = load i64, i64* %122, align 8
  %124 = icmp eq i64 %120, %123
  br i1 %124, label %125, label %126

125:                                              ; preds = %119
  br label %208

126:                                              ; preds = %119
  %127 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %128 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %127, i32 0, i32 1
  %129 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %128, align 8
  %130 = load i64, i64* %14, align 8
  %131 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %129, i64 %130
  %132 = load %struct.TYPE_24__*, %struct.TYPE_24__** %131, align 8
  %133 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %132, i32 0, i32 0
  %134 = load %struct.TYPE_23__*, %struct.TYPE_23__** %133, align 8
  %135 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %134, i32 0, i32 0
  %136 = load %struct.TYPE_25__*, %struct.TYPE_25__** %135, align 8
  store %struct.TYPE_25__* %136, %struct.TYPE_25__** %11, align 8
  %137 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %138 = load i64, i64* %14, align 8
  %139 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %140 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %139, i32 0, i32 0
  %141 = load i32, i32* %18, align 4
  %142 = call i64 @mp4_find_sample(%struct.TYPE_26__* %137, i64 %138, %struct.TYPE_27__* %140, i32 %141, i64* %12)
  store i64 %142, i64* %15, align 8
  %143 = load i64, i64* %12, align 8
  %144 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %145 = icmp ne i64 %143, %144
  br i1 %145, label %146, label %147

146:                                              ; preds = %126
  br label %208

147:                                              ; preds = %126
  %148 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %149 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %150 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %151 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %150, i32 0, i32 0
  %152 = load i64, i64* @MP4_SAMPLE_TABLE_STSS, align 8
  %153 = call i64 @mp4_seek_sample_table(%struct.TYPE_26__* %148, %struct.TYPE_25__* %149, %struct.TYPE_27__* %151, i64 %152)
  store i64 %153, i64* %12, align 8
  %154 = load i64, i64* %12, align 8
  %155 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %156 = icmp ne i64 %154, %155
  br i1 %156, label %157, label %158

157:                                              ; preds = %147
  br label %208

158:                                              ; preds = %147
  store i64 0, i64* %13, align 8
  store i64 0, i64* %16, align 8
  store i64 0, i64* %17, align 8
  br label %159

159:                                              ; preds = %189, %158
  %160 = load i64, i64* %13, align 8
  %161 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %162 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %161, i32 0, i32 1
  %163 = load %struct.TYPE_22__*, %struct.TYPE_22__** %162, align 8
  %164 = load i64, i64* @MP4_SAMPLE_TABLE_STSS, align 8
  %165 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %163, i64 %164
  %166 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %165, i32 0, i32 0
  %167 = load i64, i64* %166, align 8
  %168 = icmp ult i64 %160, %167
  br i1 %168, label %169, label %192

169:                                              ; preds = %159
  %170 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %171 = call i64 @_READ_U32(%struct.TYPE_26__* %170)
  %172 = sub i64 %171, 1
  store i64 %172, i64* %17, align 8
  %173 = load i64, i64* %17, align 8
  %174 = load i64, i64* %15, align 8
  %175 = icmp ugt i64 %173, %174
  br i1 %175, label %176, label %187

176:                                              ; preds = %169
  %177 = load i32, i32* %9, align 4
  %178 = load i32, i32* @VC_CONTAINER_SEEK_FLAG_FORWARD, align 4
  %179 = and i32 %177, %178
  %180 = icmp ne i32 %179, 0
  br i1 %180, label %181, label %183

181:                                              ; preds = %176
  %182 = load i64, i64* %17, align 8
  br label %185

183:                                              ; preds = %176
  %184 = load i64, i64* %16, align 8
  br label %185

185:                                              ; preds = %183, %181
  %186 = phi i64 [ %182, %181 ], [ %184, %183 ]
  store i64 %186, i64* %15, align 8
  br label %192

187:                                              ; preds = %169
  %188 = load i64, i64* %17, align 8
  store i64 %188, i64* %16, align 8
  br label %189

189:                                              ; preds = %187
  %190 = load i64, i64* %13, align 8
  %191 = add i64 %190, 1
  store i64 %191, i64* %13, align 8
  br label %159

192:                                              ; preds = %185, %159
  %193 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %194 = load i64, i64* %14, align 8
  %195 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %196 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %195, i32 0, i32 0
  %197 = load i64, i64* %15, align 8
  %198 = call i64 @mp4_seek_track(%struct.TYPE_26__* %193, i64 %194, %struct.TYPE_27__* %196, i64 %197)
  store i64 %198, i64* %12, align 8
  %199 = load i64, i64* %12, align 8
  %200 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %201 = icmp ne i64 %199, %200
  br i1 %201, label %202, label %203

202:                                              ; preds = %192
  br label %208

203:                                              ; preds = %192
  %204 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %205 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %204, i32 0, i32 0
  %206 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %205, i32 0, i32 1
  %207 = load i32, i32* %206, align 8
  store i32 %207, i32* %18, align 4
  br label %208

208:                                              ; preds = %203, %202, %157, %146, %125
  store i64 0, i64* %13, align 8
  br label %209

209:                                              ; preds = %251, %208
  %210 = load i64, i64* %13, align 8
  %211 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %212 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %211, i32 0, i32 0
  %213 = load i64, i64* %212, align 8
  %214 = icmp ult i64 %210, %213
  br i1 %214, label %215, label %254

215:                                              ; preds = %209
  %216 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %217 = getelementptr inbounds %struct.TYPE_26__, %struct.TYPE_26__* %216, i32 0, i32 1
  %218 = load %struct.TYPE_24__**, %struct.TYPE_24__*** %217, align 8
  %219 = load i64, i64* %13, align 8
  %220 = getelementptr inbounds %struct.TYPE_24__*, %struct.TYPE_24__** %218, i64 %219
  %221 = load %struct.TYPE_24__*, %struct.TYPE_24__** %220, align 8
  %222 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %221, i32 0, i32 0
  %223 = load %struct.TYPE_23__*, %struct.TYPE_23__** %222, align 8
  %224 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %223, i32 0, i32 0
  %225 = load %struct.TYPE_25__*, %struct.TYPE_25__** %224, align 8
  store %struct.TYPE_25__* %225, %struct.TYPE_25__** %11, align 8
  %226 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %227 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %226, i32 0, i32 0
  %228 = getelementptr inbounds %struct.TYPE_27__, %struct.TYPE_27__* %227, i32 0, i32 0
  %229 = load i64, i64* %228, align 8
  %230 = icmp ne i64 %229, 0
  br i1 %230, label %231, label %232

231:                                              ; preds = %215
  br label %251

232:                                              ; preds = %215
  %233 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %234 = load i64, i64* %13, align 8
  %235 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %236 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %235, i32 0, i32 0
  %237 = load i32, i32* %18, align 4
  %238 = call i64 @mp4_find_sample(%struct.TYPE_26__* %233, i64 %234, %struct.TYPE_27__* %236, i32 %237, i64* %12)
  store i64 %238, i64* %19, align 8
  %239 = load i64, i64* %12, align 8
  %240 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %241 = icmp ne i64 %239, %240
  br i1 %241, label %242, label %244

242:                                              ; preds = %232
  %243 = load i64, i64* %12, align 8
  store i64 %243, i64* %5, align 8
  br label %258

244:                                              ; preds = %232
  %245 = load %struct.TYPE_26__*, %struct.TYPE_26__** %6, align 8
  %246 = load i64, i64* %13, align 8
  %247 = load %struct.TYPE_25__*, %struct.TYPE_25__** %11, align 8
  %248 = getelementptr inbounds %struct.TYPE_25__, %struct.TYPE_25__* %247, i32 0, i32 0
  %249 = load i64, i64* %19, align 8
  %250 = call i64 @mp4_seek_track(%struct.TYPE_26__* %245, i64 %246, %struct.TYPE_27__* %248, i64 %249)
  store i64 %250, i64* %12, align 8
  br label %251

251:                                              ; preds = %244, %231
  %252 = load i64, i64* %13, align 8
  %253 = add i64 %252, 1
  store i64 %253, i64* %13, align 8
  br label %209

254:                                              ; preds = %209
  %255 = load i32, i32* %18, align 4
  %256 = load i32*, i32** %7, align 8
  store i32 %255, i32* %256, align 4
  %257 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  store i64 %257, i64* %5, align 8
  br label %258

258:                                              ; preds = %254, %242, %82
  %259 = load i64, i64* %5, align 8
  ret i64 %259
}

declare dso_local i32 @VC_CONTAINER_PARAM_UNUSED(i32*) #1

declare dso_local i32 @memset(%struct.TYPE_27__*, i32, i32) #1

declare dso_local i32 @mp4_read_sample_header(%struct.TYPE_26__*, i64, %struct.TYPE_27__*) #1

declare dso_local i64 @mp4_find_sample(%struct.TYPE_26__*, i64, %struct.TYPE_27__*, i32, i64*) #1

declare dso_local i64 @mp4_seek_sample_table(%struct.TYPE_26__*, %struct.TYPE_25__*, %struct.TYPE_27__*, i64) #1

declare dso_local i64 @_READ_U32(%struct.TYPE_26__*) #1

declare dso_local i64 @mp4_seek_track(%struct.TYPE_26__*, i64, %struct.TYPE_27__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
